@@ -12,7 +12,8 @@ apachectlp - a more featureful Perl-based replacement for apachectl
 
 =head1 SYNOPSIS
 
-   apachectlp [-f conf_file] [-d server_root] [-b httpd_binary] [-v] -k start|stop|restart|ping
+   apachectlp [-f conf_file] [-d server_root] [-b httpd_binary] [-v]
+              -k start|stop|restart|ping|graceful|graceful-stop
    apachectlp -h
 
 =head1 DESCRIPTION
