@@ -16,6 +16,7 @@ has 'conf_file' => ( is => 'ro', lazy_build => 1, required => 1 );
 has 'httpd_binary'  => ( is => 'ro', lazy_build => 1 );
 has 'parsed_config' => ( is => 'ro', lazy_build => 1, init_arg => undef );
 has 'server_root'   => ( is => 'ro', lazy_build => 1, );
+has 'stop_cmd'      => ( is => 'rw', init_arg   => undef, default => 'stop' );
 
 sub _cli_option_pairs {
     my $class = shift;
@@ -37,6 +38,10 @@ around '_cli_parse_argv' => sub {
         $class->_cli_usage("must specify one of -d or -f");
     }
     return %cli_params;
+};
+
+override 'valid_cli_actions' => sub {
+    return ( super(), qw(graceful graceful-stop) );
 };
 
 __PACKAGE__->meta->make_immutable();
@@ -164,7 +169,43 @@ sub do_start {
 sub do_stop {
     my $self = shift;
 
-    $self->run_httpd_command('stop');
+    $self->run_httpd_command( $self->stop_cmd() );
+}
+
+sub graceful_stop {
+    my $self = shift;
+
+    $self->stop_cmd('graceful-stop');
+    $self->stop();
+}
+
+sub graceful {
+    my $self = shift;
+
+    my $proc = $self->_ensure_is_running() or return;
+    $self->_warn_if_different_user($proc);
+
+    my $error_size_start = $self->_start_error_log_watch();
+
+    eval { $self->run_httpd_command('graceful') };
+    if ( my $err = $@ ) {
+        $log->errorf( "error during graceful restart of %s: %s",
+            $self->description(), $err );
+        $self->_report_error_log_output($error_size_start);
+        return;
+    }
+
+    if (
+        $self->_wait_for_status(
+            Server::Control::ACTIVE(), 'graceful restart'
+        )
+      )
+    {
+        $log->info( $self->status_as_string() );
+    }
+    else {
+        $self->_report_error_log_output($error_size_start);
+    }
 }
 
 sub run_httpd_command {
@@ -234,6 +275,24 @@ L<Server::Control/error_log>, L<Server::Control/pid_file>, and
 L<Server::Control/port> by parsing the conf file. However, if the parsing
 doesn't work or you wish to override certain values, you can pass them in
 manually.
+
+=head1 METHODS
+
+The following methods are supported in addition to those described in
+L<Server::Control|Server::Control>:
+
+=over
+
+=item graceful
+
+Gracefully restart the server - see
+http://httpd.apache.org/docs/2.0/stopping.html
+
+=item graceful-stop
+
+Gracefully stop the server - see http://httpd.apache.org/docs/2.0/stopping.html
+
+=back
 
 =head1 AUTHOR
 
