@@ -103,6 +103,39 @@ sub test_missing_params : Test(1) {
     qr/no conf_file or server_root specified/;
 }
 
+sub test_graceful_stop : Tests(5) {
+    my $self = shift;
+    my $ctl  = $self->{ctl};
+    my $log  = $self->{log};
+
+    ok( !$ctl->is_running(), "not running" );
+    $ctl->start();
+    ok( $ctl->is_running(), "is running" );
+    $ctl->graceful_stop();
+    $log->contains_ok(qr/stopped/);
+    ok( !$ctl->is_running(), "not running" );
+    is( $ctl->stop_cmd(), 'graceful-stop' );
+}
+
+sub test_graceful_restart : Tests(6) {
+    my $self = shift;
+    my $ctl  = $self->{ctl};
+
+    $self->setup_test_logger('debug');
+    my $log = $self->{log};
+
+    ok( !$ctl->is_running(), "not running" );
+    $ctl->start();
+    ok( $ctl->is_running(), "is running" );
+    $log->clear();
+    $ctl->graceful();
+    $log->contains_ok(qr/running '.*-k graceful.*'/);
+    $log->contains_ok(qr/waiting for server graceful restart/);
+    ok( $ctl->is_running(), "is running" );
+    $ctl->stop();
+    ok( !$ctl->is_running(), "is not running" );
+}
+
 sub is_realpath {
     my ( $path1, $path2, $name ) = @_;
 
