@@ -4,6 +4,10 @@ Revision history for Server-Control
 
 0.10  Sep 18, 2009
 
+- Add graceful and graceful-stop to apachectlp and Server::Control::Apache
+- Add bin/serverctlp, a generic version of apachectlp with required --class
+- Add -I to CLI options
+
 0.09  Sep 18, 2009
 
 - Add Hash::MoreUtils to dependencies
